# paadum-meen

./: .gitignore  CLAUDE.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-working-voice/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-04-PLAN.md  01-SKELETON.md  01-UI-SPEC.md
backend/: app.toml  pyproject.toml
backend/prompts/: system.md
backend/src/: config.py  main.py
backend/src/routes/: health.py  metrics.py  realtime.py  session.py
docs/: api-contract.md  mvp-spec.md  system-architecture.md
frontend/: index.html  package-lock.json
frontend/public/: health.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioVisualizer.tsx  Background.tsx  HoldPrompt.css  HoldPrompt.tsx  LanguageSelector.tsx  Mascot.css  Mascot.tsx  ResetButton.tsx  Subtitles.tsx  SuggestedBubbles.tsx
frontend/src/hooks/: useAppState.ts  useAudioVisualizer.ts  useIdleTimer.ts  useKeyboard.ts  useWebRTC.ts
frontend/src/lib/: api.ts  constants.ts
